# screen-demo

./: .gitignore  README.md  deploy.txt  package-lock.json  package.json  todo.md  todo.txt  tsconfig.json  tsconfig.node.json  vite.config.ts
dev-cases/: background-flickering.txt  mouse-cursor-delay.txt  mouse-cursor-smoothing.txt  mouse-overlay-flickering.txt  video-export-stuck.txt  video-playback-performance.txt  video-processing-optimization.txt  video-seeking-issue.txt
src/: App.css  App.tsx  oldApp.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/updater/: latest.json
src/components/: RemotionPlayer.tsx  RemotionVideo.tsx  Timeline.tsx
src/lib/: autoZoom.ts  projectManager.ts  thumbnailGenerator.ts  video-exporter.ts  videoController.ts  videoExporter.ts  videoRenderer.ts
src/types/: video.ts
