[package]
name = "screen-demo"
version = "0.1.5"
description = "A lightweight screen recording and editing tool with zoom animations, cursor tracking, and background customization"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "screen_demo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.12", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha.18", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windows-capture = "1.0.60"
windows = { version = "0.48", features = [
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
] }
lazy_static = "1.4.0"
rdev = "0.5.3"
base64 = "0.21.5"
parking_lot = "0.12.1"
memmap2 = "0.5.10"
tiny_http = "0.12"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
